snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__bin__fsttopsort-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/bin/fsttopsort-main.cc",
    ),
    start_line: 1,
    end_line: 41,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 3,
            exit_sum: 3,
            total_space_functions: 0,
            exit_min: 3,
            exit_max: 3,
        },
        cognitive: Stats {
            structural: 4,
            structural_sum: 4,
            structural_min: 4,
            structural_max: 4,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 7.0,
            cyclomatic: 7.0,
            n: 1,
            cyclomatic_max: 7.0,
            cyclomatic_min: 7.0,
        },
        halstead: Stats {
            u_operators: 23,
            operators: 90,
            u_operands: 35,
            operands: 66,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 41,
                unit: true,
                sloc_min: 41,
                sloc_max: 41,
            },
            ploc: Ploc {
                lines: {
                    32,
                    29,
                    26,
                    23,
                    20,
                    14,
                    11,
                    8,
                    5,
                    37,
                    40,
                    25,
                    22,
                    19,
                    16,
                    10,
                    7,
                    39,
                    33,
                    30,
                    27,
                    24,
                    18,
                    15,
                    12,
                    35,
                },
                ploc_min: 26,
                ploc_max: 26,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 18,
                lloc_min: 18,
                lloc_max: 18,
            },
            space_count: 1,
            blank_min: 11,
            blank_max: 11,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 156.0,
            halstead_vocabulary: 58.0,
            halstead_volume: 913.8450352399012,
            cyclomatic: 7.0,
            sloc: 41.0,
            comments_percentage: 0.0975609756097561,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
